--- a/templates/signin.html
+++ b/templates/signin.html
@@ -2,26 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MAIN</title>
-    <link type="text/css" href="{{ url_for('static', filename='css/signin.css')}}" rel="stylesheet" />
+    <title>Sign in</title>
+    <link type="text/css" href="{{ url_for('static', filename='css/signin.css')}}" rel="stylesheet"/>
 </head>
 <body>
 <div class="login-page">
-  <div class="form">
-    <form class="register-form">
-      <input type="text" placeholder="name"/>
-      <input type="password" placeholder="password"/>
-      <input type="text" placeholder="email address"/>
-      <button>create</button>
-      <p class="message">Already registered? <a href="#">Sign In</a></p>
-    </form>
-    <form class="login-form" method="post" action="/add username">
-      <input type="text" name="username" placeholder="username"/>
-      <input type="password" name="password" placeholder="passworda"/>
-      <button>login</button>
-      <p class="message">Not registered? <a href="#">Create an account</a></p>
-    </form>
-  </div>
+    <div class="form">
+        <form class="login-form" method="post" action="/add username">
+            <input type="text" name="username" placeholder="username"/>
+            <input type="password" name="password" placeholder="password"/>
+            <button>login</button>
+            <p class="message">Not registered? <a href="{{ url_for('register') }}">Create an account</a></p>
+        </form>
+    </div>
 </div>
- </body>
+</body>
 </html>
