--- a/templates/register.html
+++ b/templates/register.html
@@ -14,10 +14,10 @@
             <input type="text" name="email" placeholder="email address"/>
             <select name="role">
                 <option value="" selected disabled hidden>role</option>
-                <option value="1">user</option>
-                <option value="2">customer</option>
-                <option value="3">driver</option>
-                <option value="4">admin</option>
+                <option value="user">user</option>
+                <option value="customer">customer</option>
+                <option value="driver">driver</option>
+                <option value="admin">admin</option>
             </select>
             <button>create</button>
             <p class="message">Already registered? <a href="{{ url_for('signin') }}">Sign In</a></p>
