--- a/templates/signin.html
+++ b/templates/signin.html
@@ -8,11 +8,14 @@
 <body>
 <div class="login-page">
     <div class="form">
-        <form class="login-form" method="post" action="/add username">
+        <form class="login-form" method="post" action="{{url_for('signin')}}">
             <input type="text" name="username" placeholder="username"/>
             <input type="password" name="password" placeholder="password"/>
             <button>login</button>
             <p class="message">Not registered? <a href="{{ url_for('register') }}">Create an account</a></p>
+            {% for cat, msg in get_flashed_messages(True) %}
+            <div class="flash">{{msg}}</div>
+            {% endfor %}
         </form>
     </div>
 </div>
