--- a/templates/main.html
+++ b/templates/main.html
@@ -5,17 +5,11 @@
     <title>MAIN</title>
 </head>
 <body>
-<h2>
-    <form method="post" action="/add message">
-        <input type="text" name="text">
-        <input type="text" name="tag">
-        <button type="submit">Add message</button>
-    </form>
-
-    <h3>Messages list</h3>
-    {% for message in messages %}
-    <div>{{ message.text }}&nbsp;<i>{{message.tag}}</i></div>
-    {% endfor %}
+<h2> ur here after sigin
 </h2>
+{% for cat, msg in get_flashed_messages(True) %}
+<div class="flash">{{msg}}</div>
+{% endfor %}
+
 </body>
 </html>
