--- a/templates/signin.html
+++ b/templates/signin.html
@@ -8,7 +8,7 @@
 <body>
 <div class="login-page">
     <div class="form">
-        <form class="login-form" method="post" <!--action="{{url_for('main')}}-->">
+        <form class="login-form" method="post">
             <input type="text" name="username" placeholder="username"/>
             <input type="password" name="password" placeholder="password"/>
             <button>login</button>
